--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.60'
+    ext.kotlin_version = '1.1.61'
 
     repositories {
         mavenCentral()
@@ -11,6 +11,8 @@ buildscript {
 
 plugins {
     id 'nebula.provided-base' version '3.0.3'
+    id "com.jfrog.bintray" version "1.6"
+    id "com.github.johnrengelman.shadow" version "1.2.3"
 }
 
 group 'io.github.jupf.staticlog'
@@ -18,6 +20,9 @@ version '1.0.0'
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: "nebula.provided-base"
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.6
 
@@ -29,6 +34,6 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib"
     provided 'org.slf4j:slf4j-api:1.7.25'
-    provided 'io.github.jupf.staticlog:staticlog:2.1.9'
+    provided 'io.github.jupf.staticlog:staticlog:2.2.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
